--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,14 @@
 .item{
-	color:red;
-	width:100px
-	hei
+	padding:20px;
+	margin:2px;
+	background-color:orange;
+	width:50px;
+}
+.container{
+	display:flex;
+	background-color:blue;
+	padding:20px;
+	justify-content:space-between;
+	flex-wrap:wrap;
 }
 /* Your CSS Code here. */
